<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PUG\n(KPU 도우미)</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">hello</string>
    <string name="str_done">완료</string>
    <string name="path">경로</string>
    <string name="cancel">취소</string>
    <string name="mark">마크</string>
    <string name="poi">POI</string>
    <string name="gps">GPS</string>
    <string name="guide">안내</string>
    <string name="space">공간</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_search_select">SearchSelectActivity</string>
    <string name="title_activity_search_select_cate">SearchSelectCateActivity</string>
    <string name="title_activity_search_select_list">SearchSelectListActivity</string>
    <string name="title_activity_search_select_stt">SearchSelectSttActivity</string>

</resources>
